# sockt

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE.md  NFR_TESTS.md  README.md  SECURITY.md  UI_DESIGN.md  eslint.config.js  install.sh  package.json  tsconfig.build.json
rust/sockt-cli/: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md
rust/sockt-cli/assets/: slack-manifest.yaml
rust/sockt-cli/src/: cli.rs  lib.rs  main.rs  orch_client.rs
rust/sockt-cli/src/commands/: ask.rs  brain.rs  checks.rs  config_cmd.rs  connect.rs  deploy.rs  destroy.rs  down.rs  export.rs  init.rs  logs.rs  mod.rs  restart.rs  secrets.rs  slack_setup.rs  status.rs  stop.rs  tasks.rs  up.rs  upgrade_cmd.rs
rust/sockt-cli/src/compose/: mod.rs  services.rs
rust/sockt-cli/src/config/: accessor.rs  dot_path.rs  formatter.rs  loader.rs  mod.rs  secrets.rs
rust/sockt-cli/src/crypto/: mod.rs
rust/sockt-cli/src/docker/: health.rs  mod.rs
rust/sockt-cli/src/gbrain/: agents.rs  example_skill.md  mod.rs  soul.rs
rust/sockt-cli/src/logs/: filter.rs  formatter.rs  mod.rs  reader.rs
rust/sockt-cli/src/runtime/: mod.rs
rust/sockt-cli/src/socket_mode/: events.rs  mod.rs
rust/sockt-cli/src/tui/: llm_verify.rs  mod.rs  password_input.rs  status.rs  wizard.rs
rust/sockt-cli/src/upgrade/: mod.rs
rust/sockt-cli/tests/: ask_integration.rs  brain_integration.rs  cli_integration.rs  config_cmd_integration.rs  crypto_compose_integration.rs  department_integration.rs  deploy_integration.rs  doctor_integration.rs  export_integration.rs  health_integration.rs  logs_integration.rs  orch_client_integration.rs  restart_integration.rs  runtime_integration.rs  secrets_integration.rs  setup_integration_test.rs  setup_llm_test.rs  status_integration.rs  stop_integration.rs  tasks_integration.rs  upgrade_integration.rs  upgrade_simple_integration.rs
(+56 files in other folders)
